--- a/app.json
+++ b/app.json
@@ -7,7 +7,7 @@
 
   "env": {
     "SESSION_ID": {
-      "description": "Put the session-id here.",
+      "description": "iEkwnQCI#RoZ2zBZ1xRbPlmSEJxTi40kQDm36ngd-H_ZEKtqvpP0",
       "required": true
     },  
 
