--- a/app.json
+++ b/app.json
@@ -7,7 +7,7 @@
 
   "env": {
     "SESSION_ID": {
-      "description": "iEkwnQCI#RoZ2zBZ1xRbPlmSEJxTi40kQDm36ngd-H_ZEKtqvpP0",
+      "description": "qB1gEYxY#JlVxqs-vt6yGneISMWCeS07NBgBx8pe_kQnjpnJHEh8",
       "required": true
     },  
 
