--- a/app.json
+++ b/app.json
@@ -7,7 +7,7 @@
 
   "env": {
     "SESSION_ID": {
-      "description": "qB1gEYxY#JlVxqs-vt6yGneISMWCeS07NBgBx8pe_kQnjpnJHEh8",
+      "description": "3QtEzSZJ#dhH0u1WvnHZIv1dx8EENLVS-CTqMIx8kxBumca9oo6g",
       "required": true
     },  
 
