--- a/app.json
+++ b/app.json
@@ -20,13 +20,13 @@
     "ALIVE_IMG": {
       "description": "Add Alive Imge Url",
       "required": false,
-      "value": "DEXTER"
+      "value": "https://telegra.ph/file/dcd097f9f7a124d47e5b2.jpg"
     },
     
     "MENU_IMG": {
       "description": "Put your Menu img url",
       "required": false,
-      "value": "DEXTER"
+      "value": "https://telegra.ph/file/dcd097f9f7a124d47e5b2.jpg"
     }   
 },
 
