--- a/app.json
+++ b/app.json
@@ -22,6 +22,12 @@
       "required": false,
       "value": "https://telegra.ph/file/dcd097f9f7a124d47e5b2.jpg"
     },
+
+        "": {
+      "description": "Add Alive Imge Url",
+      "required": false,
+      "value": "https://telegra.ph/file/dcd097f9f7a124d47e5b2.jpg"
+    },
     
     "MENU_IMG": {
       "description": "Put your Menu img url",
