--- a/package.json
+++ b/package.json
@@ -25,6 +25,6 @@
     "qrcode-terminal": "^0.12.0",
     "yt-search":"2.12.1",
     "api-dylux":"1.8.5",
-    "apk-downloader":"1.0.2"
+    "apkmirror-downloader":"2.0.4"
   }
 }
