--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "vm": "^0.1.0",
     "qrcode-terminal": "^0.12.0",
     "yt-search":"2.12.1",
-    "api-dylux":"1.8.5",
-    "apkmirror-downloader":"2.0.4"
+    "api-dylux":"1.8.5"
   }
 }
