--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "qrcode-terminal": "^0.12.0",
     "yt-search":"2.12.1",
     "api-dylux":"1.8.5",
-    "ytdl-core":"4.11.5"
+    "ytdl-core":"4.11.5",
+    "speedtest-net":"2.2.0"
   }
 }
