--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "yt-search":"2.12.1",
     "api-dylux":"1.8.5",
     "ytdl-core":"4.11.5",
-    "speedtest-net":"2.2.0"
+    "speedtest-net":"2.2.0",
+    "wikipedia":"2.1.2"
   }
 }
