--- a/package.json
+++ b/package.json
@@ -27,8 +27,6 @@
     "api-dylux":"1.8.5",
     "ytdl-core":"4.11.5",
     "speedtest-net":"2.2.0",
-    "wikipedia":"2.1.2",
-    "google-play-scraper":"10.0.0",
-    "node-fetch":"3.3.2"
+    "wikipedia":"2.1.2"
   }
 }
