--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "restart": "pm2 restart dilamd"
   },
   "dependencies": {
-    "@whiskeysockets/baileys": "6.7.7",
-    "@adiwajshing/keyed-db": "^0.2.4",
+    "@whiskeysockets/baileys": "latest",
+    "@adiwajshing/keyed-db": "latest",
     "pino": "^7.0.5",
     "pm2": "^5.2.0",
     "util": "^0.12.4",
