--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "vm": "^0.1.0",
     "qrcode-terminal": "^0.12.0",
     "yt-search":"2.12.1",
+    "wikipedia":"2.1.2"
     "api-dylux":"1.8.5"
   }
 }
