--- a/app.json
+++ b/app.json
@@ -6,34 +6,14 @@
   "success_url": "/",
 
   "env": {
-    "MODE": {
-      "description": "public or private or index or group",
-      "required": false,
-      "value": "public"
-    },  
-    
     "SESSION_ID": {
       "description": "Add DilaMD Session ID",
       "required": true
     },  
 
-        "AUTO_READ_STATUS": {
-      "description": "true or false",
-      "required": false,
-      "value": "true"
-    },  
-
-    
-    "ALIVE_IMG": {
-      "description": "Add Alive Imge Url",
-      "required": false,
-      "value": "https://telegra.ph/file/dcd097f9f7a124d47e5b2.jpg"
-    },
-    
-    "MENU_IMG": {
-      "description": "Put your Menu img url",
-      "required": false,
-      "value": "https://telegra.ph/file/dcd097f9f7a124d47e5b2.jpg"
+        "MONGODB": {
+      "description": "Put your Mongodb url",
+      "required": true
     }   
 },
 
