--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "hirunews-scrap":"1.1.2",
     "@sl-code-lords/esana-news" : "latest",
     "@kaveesha-sithum/derana-news" : "latest",
-    "hirunews-scraper":"3.0.0"
+    "hirunews-scraper":"3.0.0",
+    "weather-js":"2.0.0"
   }
 }
