--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@kaveesha-sithum/derana-news" : "latest",
     "hirunews-scraper":"3.0.0",
     "weather-js":"2.0.0",
-    "@vitalets/google-translate-api":"9.2.0"
+    "@vitalets/google-translate-api":"9.2.0",
+    "node-schedule":"2.1.1"
   }
 }
